Allow more rsync options
Conflicts:
	rsync/conf/rsyncd.conf

--- a/rsync/conf/rsyncd.conf
+++ b/rsync/conf/rsyncd.conf
@@ -4,7 +4,9 @@ uid = {{ server.user }}
 gid = {{ server.group }}
 log file = /var/log/rsyncd.log
 pid file = /var/run/rsyncd.pid
+{%- if server.bind is defined %}
 address = {{ server.bind.address }}
+{%- endif %}
 
 {%- for name, module in server.module.iteritems() %}
 [{{ name}}]
@@ -14,4 +16,20 @@ max connections = {{ module.max_connections }}
 path = {{ module.path }}
 read only = {{ module.get('read_only', True) }}
 lock file = /var/lock/rsync_{{ name }}.lock
+{%- if module.comment is defined %}
+comment = {{ module.comment }}
+{%- endif %}
+{%- if module.uid is defined %}
+uid = {{ module.uid }}
+{%- endif %}
+{%- if module.gid is defined %}
+gid = {{ module.gid }}
+{%- endif %}
+{%- if module.chroot is defined and module.chroot %}
+use chroot = true
+{%- endif %}
+{%- if module.hosts_allow is defined %}
+hosts allow = {{ module.hosts.allow }}
+hosts deny = *
+{%- endif %}
 {%- endfor %}
