rsync formula updated

--- a/metadata/service/server/single.yml
+++ b/metadata/service/server/single.yml
@@ -1,2 +1,9 @@
 applications:
 - rsync
+parameters:
+  rsync:
+    server:
+      bind:
+        address: 0.0.0.0
+      user: root
+      group: root
