--- a/rsync/conf/rsyncd.conf
+++ b/rsync/conf/rsyncd.conf
@@ -6,10 +6,10 @@ log file = /var/log/rsyncd.log
 pid file = /var/run/rsyncd.pid
 address = {{ server.bind.address }}
 
-{%- for module in server.modules %}
-[{{ module.name}}]
+{%- for name, module in server.module.iteritems() %}
+[{{ name}}]
 max connections = {{ module.max_connections }}
-path = /srv/1/node/ {{ module.device }}
+path = {{ module.path }}
 read only = {{ module.read_only }}
-lock file = /var/lock/rsync_{{ module.name }}.lock
+lock file = /var/lock/rsync_{{ name }}.lock
 {%- endfor %}
