--- a/rsync/conf/rsyncd.conf
+++ b/rsync/conf/rsyncd.conf
@@ -6,7 +6,7 @@ log file = /var/log/rsyncd.log
 pid file = /var/run/rsyncd.pid
 address = {{ server.bind.address }}
 
-{%- for name, module in server.module.iteritems() %}
+{%- for name, module in server.modules.iteritems() %}
 [{{ name}}]
 max connections = {{ module.max_connections }}
 path = {{ module.path }}
