Make max connections optional

--- a/rsync/conf/rsyncd.conf
+++ b/rsync/conf/rsyncd.conf
@@ -8,8 +8,10 @@ address = {{ server.bind.address }}
 
 {%- for name, module in server.module.iteritems() %}
 [{{ name}}]
+{%- if module.max_connections is defined %}
 max connections = {{ module.max_connections }}
+{%- endif %}
 path = {{ module.path }}
-read only = {{ module.read_only }}
+read only = {{ module.get('read_only', True) }}
 lock file = /var/lock/rsync_{{ name }}.lock
 {%- endfor %}
