allow spec. timeout

--- a/rsync/files/rsyncd.conf
+++ b/rsync/files/rsyncd.conf
@@ -7,6 +7,9 @@ pid file = /var/run/rsyncd.pid
 {%- if server.bind is defined %}
 address = {{ server.bind.address }}
 {%- endif %}
+{%- if server.timeout is defined %}
+timeout = {{ server.timeout }}
+{%- endif %}
 
 {%- for name, module in server.module.iteritems() %}
 [{{ name}}]
@@ -33,3 +36,4 @@ hosts allow = {{ module.hosts.allow }}
 hosts deny = *
 {%- endif %}
 {%- endfor %}
+
