Remove salt-master, reclass from pkg dependencis
Change-Id: Ifc261fdad6d87936f948181e70122ddebafe21de

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Vcs-Git: https://github.com/tcpcloud/salt-formula-rsync.git
 
 Package: salt-formula-rsync
 Architecture: all
-Depends: ${misc:Depends}, salt-master, reclass
+Depends: ${misc:Depends}
 Description: rsync Salt formula
  Install and configure rsync server and client.
