fix typo in rsyncd.conf
Change-Id: I41f69eb0a910c8c9acc9439e9abfcbd078a48450

--- a/rsync/files/rsyncd.conf
+++ b/rsync/files/rsyncd.conf
@@ -32,7 +32,7 @@ gid = {{ module.gid }}
 use chroot = true
 {%- endif %}
 {%- if module.hosts_allow is defined %}
-hosts allow = {{ module.hosts.allow }}
+hosts allow = {{ module.hosts_allow }}
 hosts deny = *
 {%- endif %}
 {%- endfor %}
